nestjs-backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-backend
  template:
    metadata:
      labels:
        app: nestjs-backend
    spec:
      containers:
        - name: nestjs-backend
          image: asia-docker.pkg.dev/rock-star-451301-e4/nestjs-repo/nestjs-gke:latest
          ports:
            - containerPort: 3000
