nestjs-backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend
spec:
  type: LoadBalancer
  selector:
    app: nestjs-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32000 # ✅ NodePort 범위 (30000~32767) 내에서 지정 가능
