nestjs-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
    - http: # 🔥 `host` 필드를 제거하여 모든 요청을 허용
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-backend
                port:
                  number: 80
